z-index issue

--- a/Mainichi.Web.Store/Content/Styles/Mainichi.less
+++ b/Mainichi.Web.Store/Content/Styles/Mainichi.less
@@ -598,8 +598,6 @@ html {
             margin-bottom: 20px;
 
             #cart-holder {
-                z-index: 12;
-
                 #cart-content {
                     display: block;
                     //height: 72px;
